# Backend

admin_gpt/: README.md  jumi_admin_answer_support_gpt.py  requirements.txt  zappa_settings.json
stream/: README.md  client.py  main.py  requirements-dev.txt  requirements.txt
web/: pyproject.toml
web/app/: __init__.py  main.py
web/app/api/dependencies/: credential.py  security_base.py
web/app/api/exceptions/: base.py
web/app/api/routes/: api.py
web/app/api/routes/businesses/: business.py  item.py  prompt.py
web/app/api/routes/health_check/: api.py
web/app/api/routes/image/: api.py
web/app/api/routes/order/: api.py
web/app/api/routes/users/: login.py
web/app/core/: config.py
web/app/core/settings/: app.py
web/app/db/: dependencies.py
web/app/db/models/: businesses.py  items.py  orders.py  users.py
web/app/db/repositories/: businesses.py  items.py  orders.py  users.py
web/app/models/domain/: auth.py  businesses.py  items.py  orders.py
web/app/models/schemas/: business.py  etc.py  image.py  items.py  order.py  prompt.py  users.py
web/app/resouces/numbers/: auth.py
web/app/resouces/strings/: auth.py  businesses.py  db.py  orders.py  prompt.py  users.py
web/app/services/auth/: service.py
web/app/services/businesses/: service.py
web/app/services/items/: service.py
web/app/services/orders/: service.py
web/app/services/prompt/: client.py
web/app/services/users/: service.py
